Test/errors/err_container_copy_into_field.cb
// X4 Part 1: copying an owning container VALUE by value into a struct field shallow-
// aliases its backing buffer, which is then freed twice at teardown (once by the source's
// destructor, once by the field's) -> STATUS_HEAP_CORRUPTION. There is no runtime owns-flag
// to make this safe, so it is rejected at compile time with a steer to '.copy()' or 'move'.
import "list.cb";

class Holder
{
    list<int> xs = default;

    void init(list<int> v)
    {
        // 'xs' is a field of Holder; 'v' is a named by-value parameter whose buffer is
        // still owned by the caller's source -> shallow copy aliases it.
        expect_error("copying owning value 'list<int>' by value into a struct field");
        xs = v;
    }
};

// Part 2: the SAME store, spelled as brace-init. Brace-init is a second, independent field-store
// path, so it must reject identically - otherwise the rule above is bypassed by changing spelling
// and the double-free comes back (it did: ASAN reported it).
struct BraceHolder { list<int> items = default; };

void braceInitCopy(list<int> src)
{
    expect_error("copying owning value 'list<int>' by value into a struct field");
    BraceHolder h = { items = src };
}

extern int main()
{
    return 0;
}
